codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_auto_review_permissions.snap
---
source: tui/src/status/tests.rs
assertion_line: 746
expression: sanitized
---
/status

╭──────────────────────────────────────────────────╮
│  >_ SeekForge (v0.0.0)                           │
│                                                  │
│  Model:            gpt-5.1-codex-max             │
│  Model provider:   DeepSeek                      │
│  Directory: [[workspace]]                        │
│  Permissions:      Workspace (Approve for me)    │
│  Agents.md:        <none>                        │
│                                                  │
│  Token usage:      0 total  (0 input + 0 output) │
│  Context window:   100% left (0 used / 272K)     │
│  Limits:           data not available yet        │
╰──────────────────────────────────────────────────╯
